tests/ui/type/issue-7607-1.stderr
error[E0412]: cannot find type `Fo` in this scope
  --> $DIR/issue-7607-1.rs:5:6
   |
LL | impl Fo {
   |      ^^ help: a trait with a similar name exists: `Fn`
   |
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   |
   = note: similarly named trait `Fn` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
